--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Document</title>
+      <title>Rock Paper Scissor</title>
    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-   <script src="jquery-3.3.1.js"></script>
    <script src="app.js"></script>
-   <link rel="stylesheet" href="bootstrap.min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -124,7 +123,7 @@
                         <div id="select">
                               <button id="rockhand" class="btn ">Rock</button>
                               <button id="paperhand" class="btn btn-primary">Paper</button>
-                              <button id="scissorsha" class="btn btn-dark">Scissors</button>
+                              <button id="scissorsha" class="btn btn-dark">Scissor</button>
                         </div>
                </div>
             <div class="col-12 mt-4">
