--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Rock Paper Scissor</title>
-   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-   <script src="app.js"></script>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
    <link rel="stylesheet" href="style.css">
 </head>
@@ -121,7 +119,7 @@
             
                <div class="col-12 mt-3">
                         <div id="select">
-                              <button id="rockhand" class="btn ">Rock</button>
+                              <button id="rockhand" class="btn btn-light">Rock</button>
                               <button id="paperhand" class="btn btn-primary">Paper</button>
                               <button id="scissorsha" class="btn btn-dark">Scissor</button>
                         </div>
