--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <div class="col-12 mt-3">
                      <div id="banner-wrap">
                            <div class="banner">
-                                 <span class="left">humans</span>
+                                 <span class="left">human</span>
                                  <span class="vsicon"><img src="img/VS.png" alt=""></span>
                                  <span class="right">computer</span>
                            </div>
